# agenteam

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements.txt
.claude/agents/: ceo.md  cpo.md  cto.md
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-05-29-init-wizard.md
docs/superpowers/specs/: 2026-05-29-init-wizard-design.md
src/agensuite/: __init__.py  cli.py  git_engine.py  models.py  state.py  wizard.py
src/agensuite/templates/: AGENTS.md
src/agensuite/templates/.claude/agents/: cdo.md  ceo.md
src/agenteam/: __init__.py  cli.py  git_engine.py  models.py  sprint_loader.py  state.py
src/agenteam/templates/: AGENTS.md
src/agenteam/templates/.claude/agents/: cco.md  cdo.md  ceo.md
src/agenteam/templates/agents/: cco.md  ceo.md  cpo.md  cto.md
src/agenteam/templates/sprints/: sprint-1.md
tests/: conftest.py  test_cli.py  test_git_engine.py  test_models.py  test_sprint_loader.py  test_state.py  test_wizard_units.py
