[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteam"
version = "0.1.0"
description = "Agent-native C-suite template: a coding agent orchestrates a turn-based debate between role subagents via a thin CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
agenteam = "agenteam.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agenteam = [
    "templates/AGENTS.md",
    "templates/.claude/agents/*.md",
    "templates/sprints/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
