[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agensuite"
# Pre-1.0 alpha while WIP. `pip install agensuite` skips pre-releases by
# default, so an accidental early publish never reaches normal users
# (they'd need `--pre`). Bump to "0.1.0" for the first stable release.
version = "0.1.0a0"
description = "Agent-native C-suite template: a coding agent orchestrates a turn-based debate between role subagents via a thin CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/omri-am/agenteam"
Repository = "https://github.com/omri-am/agenteam"
Issues = "https://github.com/omri-am/agenteam/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
agensuite = "agensuite.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agensuite = [
    "templates/AGENTS.md",
    "templates/.claude/agents/*.md",
    "templates/sprints/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
